After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768361 - videodecoder: Takes stream lock for non-serialized queries
videodecoder: Takes stream lock for non-serialized queries
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal critical
: 1.8.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-07-04 07:46 UTC by Sebastian Dröge (slomo)
Modified: 2016-07-25 10:26 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastian Dröge (slomo) 2016-07-04 07:46:46 UTC
See https://bugs.webkit.org/show_bug.cgi?id=159396 for an example backtrace that causes problems with that. It really shouldn't do that :)
Comment 1 Sebastian Dröge (slomo) 2016-07-04 08:56:32 UTC
commit 66342c5c86900d88d1a1c35f3a3aa6ab1b243580
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Mon Jul 4 10:55:07 2016 +0200

    videodecoder: Use the object lock to protect bytes/time tracking
    
    And especially don't use the stream lock for that, as otherwise non-serialized
    queries (CONVERT) will cause the stream lock to be taken and easily causes the
    application to deadlock.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=768361

commit 3cabd3fe5539fcdce535848e5087ff8cf69f17b8
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Mon Jul 4 10:52:24 2016 +0200

    videoencoder: Use the object lock to protect bytes/time tracking

commit d8111778bd1c7d5742740ec8f490ec495f61e8b2
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Mon Jul 4 10:47:36 2016 +0200

    videoencoder/decoder: Move conversion utility functions to a common header and use consistently in encoder/decoder
Comment 2 Michael Catanzaro 2016-07-11 13:08:01 UTC
If this is broken in 1.8, backports would be appreciated.
Comment 3 Sebastian Dröge (slomo) 2016-07-11 14:02:47 UTC
It's on my list of things to be backported